--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Simple React App</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap"
+    rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico">
+  <title>La-Té | Accept Donations and Memberships. No Fees!</title>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
