--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -3,6 +3,16 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta property="og:title" content="La-Te" />
+     <meta property="og:image" content="../src/assets/la-te-splash.png" />
+     <meta
+       property="og:description"
+       content="A place to receive donations from fans"
+     />
+     <meta
+       property="og:url"
+       content="https://github.com/garydsong/La-Te"
+     />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap"
