--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta property="og:title" content="La-Te" />
-     <meta property="og:image" content="../src/assets/la-te-splash.png" />
+     <meta property="og:image" content="./images/la-te-splash.png" />
      <meta
        property="og:description"
        content="A place to receive donations from fans"
